# gimageview

./: .cvsignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  gimageview.spec.in
doc/ja/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  COPYING.ja  ChangeLog.ja  INSTALL.ja  Makefile.am  NEWS.ja  README.ja  TODO.ja  changelog.html  document.html  gimageview.css  gimageview.txt  gimv_faq.html  gimv_history.html  gimv_tips.html  index.html  todo.html
etc/: .cvsignore  Makefile.am  gimageview.desktop.in  gtkrc  mplayerrc
intl/: Makefile.in  bindtextdom.c  cat-compat.c  config.charset  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  explodename.c  finddomain.c  gettext.c  gettext.h  gettextP.h  hash-string.h  intl-compat.c  l10nflist.c  libgettext.h  libgnuintl.h  loadinfo.h  loadmsgcat.c  localcharset.c  locale.alias  localealias.c  ngettext.c  plural.c  plural.y  ref-add.sin  ref-del.sin  textdomain.c
lib/: Makefile.am
lib/dllloader/: .cvsignore  Makefile.am  advapi32.c  advapi32.h  borlndmm.c  borlndmm.h  common.h  compat.h  converter.c  converter.h  dlist.c  dlist.h  export.h  hash.c  hash.h  kernel32.c  kernel32.h  libstring.c  libstring.h  misc.c  misc.h  mm.c  mm.h  module.c  module.h  msvcrt.c  msvcrt.h  pe.h  pe_image.c  pe_image.h  spi.c  user32.c  user32.h  w32api.h  windef.h
lib/libexif/: Makefile.am  exif-data.c  exif-entry.c  exif-i18n.h  exif-loader.c  jpeg-data.c  jpeg-data.h
m4/: Makefile.am  gettext.m4  glibc21.m4  gnome.m4  intltool.m4  libcharset.m4  libtool.m4  libwmf.m4  xine.m4
plugins/: Makefile.am
plugins/archiver/: Makefile.am  lha-ext.c  lha-ext.h  rar-ext.c  rar-ext.h  tar-ext.c  tar-ext.h  zip-ext.c  zip-ext.h
plugins/image_loader/: Makefile.am  bmp.c  bmp.h  imlib_loader.c  imlib_loader.h  jpeg_loader.c  mag.c  mag.h  mng.c  mng.h  pcx.c  pcx.h  pixbuf_anim.c  pixbuf_anim.h  pixbuf_loader.c  pixbuf_loader.h  png_loader.c  png_loader.h  prefs_spi.c  prefs_spi.h  spi-private.h  spi.c  spi.h  spi_image_loader.c  spi_image_loader.h  svg.c  svg.h  tga.c  tga.h  wmf.c  wmf.h  xbm.c  xbm.h  xcf.c  xcf.h  xvpics.c  xvpics.h
plugins/image_saver/: Makefile.am  dither.c  png_saver.c  pnm_saver.c  xvpics_saver.c
plugins/image_view/: Makefile.am  gimv_mplayer.c  gimv_mplayer.h  gimv_xine.c  gimv_xine.h  gimv_xine_post.c  gimv_xine_post.h  gimv_xine_priv.c  gimv_xine_priv.h  image_view_mplayer.c  image_view_xine.c  mplayer_image_loader.c  mplayer_image_loader.h  prefs_mplayer.c  prefs_mplayer.h  prefs_xine.c  prefs_xine.h  xine_image_loader.c  xine_image_loader.h
plugins/io_stream/: Makefile.am  gimv_bz_io.c  gimv_bz_io.h  gimv_gzip_io.c  gimv_gzip_io.h
plugins/thumbnail/: Makefile.am  ee.c  gimv_thumb.c  gqview.c  konqueror-old.c  konqueror.c  nautilus-2.0.c  nautilus.c  xvpics.c
plugins/thumbnail_view/: Makefile.am  detailview.c  detailview.h  detailview2.c  detailview_prefs.c  detailview_prefs.h  detailview_priv.h
po/: .cvsignore  ChangeLog  Makefile.in.in  POTFILES.in  fr.po  ja.po
src/: .cvsignore  Makefile.am  argparse.c  argparse.h  auto_completion.c  charset.c  charset.h  compare_filesize.c  compare_md5.c  compare_similar.c  cursors.c  cursors.h  dirview.c  dirview2.c  dirview_priv.h  dither.h  dnd.c  dnd.h  exif_view.c  fileload.c  fileload.h  fileutil.c  fr-archive.c  fr-archive.h  fr-command.c  fr-command.h  fr-process.c  fr-process.h  gfileutil.c  gfileutil.h  gimageview.c  gimageview.h  gimv_anim.c  gimv_anim.h  gimv_cell_pixmap.c  gimv_cell_pixmap.h  gimv_comment.c  gimv_comment.h  gimv_comment_view.c  gimv_comment_view.h  (+115 more)
src/cursors/: Makefile.am
src/pixmaps/: Makefile.am  alert.xpm  archive.xpm  back.xpm  close.xpm  dotfile.xpm  folder-link-open.xpm  folder-link.xpm  folder-open.xpm  folder.xpm  folder24.xpm  folder32.xpm  folder48.xpm  forward.xpm  fullscreen.xpm  gimageview.xpm  gimv_icon.xpm  home.xpm  image.xpm  leftarrow.xpm  nfolder.xpm  no_zoom.xpm  paper.xpm  play.xpm  prefs.xpm  question.xpm  resize.xpm  rightarrow.xpm  rotate.xpm  search.xpm  skip.xpm  small_archive.xpm  small_close.xpm  small_home.xpm  small_refresh.xpm  small_up.xpm  stop.xpm  stop2.xpm  up.xpm  zoom.xpm  (+3 more)
src/prefs_ui/: Makefile.am  prefs_ui_common.c  prefs_ui_common.h  prefs_ui_etc.c  prefs_ui_etc.h  prefs_ui_imagewin.c  prefs_ui_imagewin.h  prefs_ui_movie.c  prefs_ui_movie.h  prefs_ui_plugin.c  prefs_ui_plugin.h  prefs_ui_progs.c  prefs_ui_progs.h  prefs_ui_thumbalbum.c  prefs_ui_thumbalbum.h  prefs_ui_thumbwin.c  prefs_ui_thumbwin.h
