jahtmldir =  $(DESTDIR)$(gimv_docdir)/html/ja
jahtml_DATA = \
	gimageview.css \
	index.html \
	01.html \
	02.html \
	03.html \
	04.html \
	05.html \
	06.html \
	07.html \
	gimv_faq.html \
	gimv_tips.html \
	gimv_history.html \
	todo.html \
	document.html \
	changelog.html

jatextdir = $(DESTDIR)$(gimv_docdir)/text/ja
jatext_DATA = \
	COPYING.ja \
	ChangeLog.ja \
	README.ja \
	INSTALL.ja \
	NEWS.ja \
	TODO.ja \
	gimageview.txt

EXTRA_DIST = \
	$(jahtml_DATA) \
	$(jatext_DATA)
