default_icondir = $(DESTDIR)$(gimv_icondir)/default

default_icon_DATA =		\
	alert.xpm		\
	archive.xpm		\
	back.xpm		\
	close.xpm		\
	dotfile.xpm		\
	folder-go.xpm		\
	folder-link.xpm 	\
	folder-link-open.xpm 	\
	folder-lock.xpm         \
	folder-open.xpm		\
	folder-up.xpm		\
	folder.xpm 		\
	folder48.xpm 		\
	forward.xpm		\
	fullscreen.xpm		\
	gimageview.xpm		\
	gimv_icon.xpm		\
	image.xpm		\
	home.xpm		\
	leftarrow.xpm		\
	nav_button.xpm 		\
	nfolder.xpm		\
	no_zoom.xpm		\
	paper.xpm		\
	prefs.xpm		\
	question.xpm		\
	refresh.xpm		\
	resize.xpm		\
	rightarrow.xpm		\
	rotate.xpm		\
	search.xpm		\
	skip.xpm		\
	small_archive.xpm	\
	small_close.xpm		\
	small_home.xpm		\
	small_refresh.xpm	\
	small_up.xpm		\
	up.xpm			\
	stop.xpm		\
	zoom.xpm		\
	zoom_fit.xpm		\
	zoom_in.xpm		\
	zoom_out.xpm		\
	next_t.xpm		\
	prev_t.xpm		\
	ff.xpm			\
	rw.xpm			\
	play.xpm		\
	pause.xpm		\
	stop2.xpm		\
	eject.xpm

EXTRA_DIST =			\
	$(default_icon_DATA)	\
	hand-closed-data.xbm	\
	hand-closed-mask.xbm	\
	hand-open-data.xbm	\
	hand-open-mask.xbm	\
	void-data.xbm		\
	void-mask.xbm
